[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gva-pipeline"
version = "0.1.0"
description = "Deterministic enrichment pipeline for GVA mass-shootings CSV exports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "pandas>=2.2,<3",
  "requests>=2.31,<3",
  "streamlit>=1.44,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
